# sql-mcp

./: .bumpversion.cfg  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .vulture_ignore  404.html  AGENTS.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  a2a.json  index.html  mcp_config.json  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
concepts/: index.html
deployment/: index.html
docker/: Dockerfile  agent.compose.yml  compose.yml  debug.Dockerfile  mcp.compose.yml
docs/: concepts.md  deployment.md  index.md  installation.md  overview.md  platform.md  usage.md
installation/: index.html
overview/: index.html
platform/: index.html
scripts/: validate_agent.py  verify_api_integration.py
search/: search_index.json
sql_mcp/: __init__.py  __main__.py  agent_server.py  api_client.py  auth.py  dialects.py  mcp_server.py  safety.py  sql_input_models.py  sql_response_models.py
sql_mcp/api/: __init__.py  api_client_sql.py
sql_mcp/mcp/: __init__.py  mcp_sql.py
sql_mcp/prompts/: main_agent.json
sql_mcp/skills/sql-starter/: SKILL.md
tests/: conftest.py  test_api_client.py  test_api_wrapper.py  test_auth.py  test_concept_parity.py  test_dialect_paths.py  test_dialects.py  test_init_dynamics.py  test_safety.py  test_sql_mcp_validation.py  test_startup.py
usage/: index.html
